Further merge Googler Sean's touchscreen updates: * use JavaScript for feedback on KML load/unload * ensure a sub-menu always visible * rename layers png

--- a/php-interface/style.css
+++ b/php-interface/style.css
@@ -84,6 +84,18 @@ body {
   z-index: 1;
   -webkit-transition: opacity .5s linear;
 }
+.subtitle {
+  cursor: hand;
+  cursor: pointer;
+  font-size: 125%;
+  padding: 10px 10px 10px 10px;
+  opacity: 1;
+  color: blue;
+  position: relative;
+  text-align: center;
+  z-index: 1;
+  -webkit-transition: opacity .5s linear;
+}
 .earth:hover>.title, .moon:hover>.title, .mars:hover>.title, .layers:hover>.title, .appctl:hover>.title {
   opacity: 1;
   -webkit-transition: opacity .5s linear;
